--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -29,13 +29,12 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_navigation" />
-
         <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="com.example.sc1111.finastrahack.LandingPageActivity"
             tools:showIn="@layout/activity_landing_page">
@@ -49,9 +48,6 @@
                 android:textSize="36sp" />
 
         </android.support.v4.widget.NestedScrollView>
-
-
-        <!--Put content here-->
 
     </android.support.design.widget.CoordinatorLayout>
 
