--- a/app/src/main/res/layout/activity_trends.xml
+++ b/app/src/main/res/layout/activity_trends.xml
@@ -13,7 +13,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.sc1111.finastrahack.NavigationActivity">
+        tools:context="com.example.sc1111.finastrahack.TrendsActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
