--- a/app/src/main/res/layout/nav_nonsecure_header_navigation.xml
+++ b/app/src/main/res/layout/nav_nonsecure_header_navigation.xml
@@ -20,17 +20,10 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/userDataName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="John Smith"
+        android:text="Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <TextView
-        android:id="@+id/userDataEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="sid@thekid.com" />
 
 </LinearLayout>
