--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -25,6 +25,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="John Smith"
+        android:onClick="onLoginClick"
+        android:clickable="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
