--- a/app/src/main/res/menu/menu_landing_page.xml
+++ b/app/src/main/res/menu/menu_landing_page.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.sc1111.finastrahack.LandingPageActivity">
     <item
+        android:id="@+id/optionSignOut"
+        android:orderInCategory="100"
+        android:title="@string/sign_out"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
