--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,9 +100,12 @@
                         android:id="@+id/email_sign_in_button"
                         style="?android:textAppearanceSmall"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="71dp"
                         android:layout_marginTop="16dp"
+                        android:fontFamily="sans-serif-condensed"
                         android:text="@string/action_sign_in"
+                        android:textAlignment="center"
+                        android:textSize="36sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
