--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -42,15 +42,29 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/welcome"
+                    android:layout_width="389dp"
+                    android:layout_height="75dp"
+                    android:layout_marginBottom="34dp"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text=""
+                    android:textAlignment="center"
+                    android:textSize="45sp"
+                    app:layout_constraintBottom_toTopOf="@+id/currentBalance_label"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
                     android:id="@+id/currentBalance_label"
-                    android:layout_width="160dp"
+                    android:layout_width="393dp"
                     android:layout_height="22dp"
                     android:layout_marginBottom="23dp"
-                    android:layout_marginEnd="112dp"
-                    android:layout_marginStart="112dp"
-                    android:layout_marginTop="34dp"
-                    android:text="CURRENT BALANCE:"
+                    android:layout_marginTop="32dp"
+                    android:text="CURRENT BALANCE"
                     android:textAlignment="center"
+                    android:textStyle="italic"
                     app:layout_constraintBottom_toTopOf="@+id/textView8"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -58,52 +72,30 @@
 
                 <TextView
                     android:id="@+id/bal"
-                    android:layout_width="329dp"
-                    android:layout_height="77dp"
-                    android:layout_marginBottom="129dp"
-                    android:layout_marginEnd="28dp"
-                    android:layout_marginStart="28dp"
+                    android:layout_width="383dp"
+                    android:layout_height="76dp"
+                    android:layout_marginBottom="60dp"
                     android:layout_marginTop="23dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="CURRENT BALANCE"
                     android:textAlignment="center"
-                    android:textSize="36sp"
+                    android:textSize="50sp"
                     app:layout_constraintBottom_toTopOf="@+id/btn-pay"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/currentBalance_label"
-                    app:layout_constraintVertical_bias="0.687" />
+                    app:layout_constraintVertical_bias="0.875" />
 
-                <TextView
-                    android:id="@+id/welcome"
-                    android:layout_width="184dp"
-                    android:layout_height="39dp"
-                    android:layout_marginBottom="34dp"
-                    android:layout_marginEnd="100dp"
-                    android:layout_marginStart="100dp"
-                    android:layout_marginTop="16dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text=""
-                    android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/currentBalance_label"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/btn-pay"
-                    android:layout_width="221dp"
-                    android:layout_height="105dp"
-                    android:layout_marginEnd="82dp"
-                    android:layout_marginStart="82dp"
+                    android:layout_width="378dp"
+                    android:layout_height="104dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="PAY LOAN"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -111,7 +103,6 @@
 
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -120,7 +111,8 @@
         app:headerLayout="@layout/nav_header_navigation"
         app:menu="@menu/activity_navigation_drawer" />
 
+
 </android.support.v4.widget.DrawerLayout>
 
 
-
+<!-- -->
