--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3087B4</color>
+    <color name="colorPrimaryDark">#143D55</color>
+    <color name="colorAccent">#7E9234</color>
+
+    <color name="colorBlue">#143D55</color>
 </resources>
