--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/gradient"
     tools:openDrawer="start">
 
 
@@ -113,16 +114,12 @@
         </LinearLayout>
 
     </android.support.design.widget.CoordinatorLayout>
-    <android.support.design.widget.NavigationView
+  <!--  <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header_navigation"
         app:menu="@menu/activity_navigation_drawer" />
-
+-->
 </android.support.v4.widget.DrawerLayout>
-
-
-    <!--
-        -->
