--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -5,4 +5,10 @@
     <item name="ic_menu_manage" type="drawable">@android:drawable/ic_menu_manage</item>
     <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
     <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
+
+    <gradient
+        android:startColor="#f1f1f2"
+        android:centerColor="#e7e7e8"
+        android:endColor="#cfcfcf"
+        android:angle="270" />
 </resources>
