--- a/app/src/main/res/layout/activity_burn_out.xml
+++ b/app/src/main/res/layout/activity_burn_out.xml
@@ -38,27 +38,20 @@
 
             <Spinner
                 android:id="@+id/fac_choice"
-                android:layout_width="272dp"
-                android:layout_height="30dp"
-                android:layout_marginBottom="69dp"
-                android:layout_marginEnd="56dp"
-                android:layout_marginStart="56dp"
+                android:layout_width="384dp"
+                android:layout_height="28dp"
+                android:layout_marginBottom="29dp"
                 android:layout_marginTop="71dp"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/title_graph"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textAlignment="center"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.jjoe64.graphview.GraphView
                 android:id="@+id/graph"
-                android:layout_width="340dp"
-                android:layout_height="258dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="92dp"
+                android:layout_width="383dp"
+                android:layout_height="248dp"
                 app:layout_constraintBottom_toTopOf="@+id/years_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,26 +60,31 @@
 
             <TextView
                 android:id="@+id/years_label"
-                android:layout_width="wrap_content"
-                android:layout_height="18dp"
-                android:layout_marginBottom="81dp"
-                android:layout_marginEnd="118dp"
-                android:layout_marginStart="112dp"
+                android:layout_width="384dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="140dp"
+                android:fontFamily="sans-serif-condensed"
                 android:text="Years After Graduation"
+                android:textAlignment="center"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/graph"
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/title_graph"
-                android:layout_width="160dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="112dp"
-                android:layout_marginStart="112dp"
-                android:layout_marginTop="67dp"
-                android:text="Loan Payback Burndown"
+                android:layout_width="380dp"
+                android:layout_height="27dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="29dp"
+                android:fontFamily="sans-serif-condensed"
+                android:text="LOAN PAYBACK BURNDOWN"
+                android:textAlignment="center"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/graph"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +93,6 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.design.widget.CoordinatorLayout>
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -105,4 +102,9 @@
         app:headerLayout="@layout/nav_header_navigation"
         app:menu="@menu/activity_navigation_drawer" />
 
+
 </android.support.v4.widget.DrawerLayout>
+
+<!--
+
+-->
