--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,8 +39,8 @@
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             android:paddingTop="@dimen/activity_vertical_margin"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -56,7 +56,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="99dp"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher_foreground" />
+            </LinearLayout>
 
             <ScrollView
                 android:id="@+id/login_form"
@@ -71,46 +78,54 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#fff"
+                        android:textColorHint="#fff">
 
                         <AutoCompleteTextView
                             android:id="@+id/email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:backgroundTint="#fff"
                             android:hint="@string/prompt_email"
                             android:inputType="textEmailAddress"
                             android:maxLines="1"
-                            android:singleLine="true" />
+                            android:singleLine="true"
+                            android:textColor="#fff" />
 
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#fff">
 
                         <EditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:backgroundTint="#fff"
                             android:hint="@string/prompt_password"
                             android:imeActionId="6"
                             android:imeActionLabel="@string/action_sign_in_short"
                             android:imeOptions="actionUnspecified"
                             android:inputType="textPassword"
                             android:maxLines="1"
-                            android:singleLine="true" />
+                            android:singleLine="true"
+                            android:textColor="#fff" />
 
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
                         android:id="@+id/email_sign_in_button"
-                        style="?android:textAppearanceSmall"
                         android:layout_width="match_parent"
                         android:layout_height="71dp"
                         android:layout_marginTop="16dp"
+                        android:background="#96AD3E"
                         android:fontFamily="sans-serif-condensed"
                         android:text="@string/action_sign_in"
                         android:textAlignment="center"
+                        android:textColor="#fff"
                         android:textSize="36sp"
                         android:textStyle="bold" />
 
@@ -120,13 +135,13 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-
+    <android.support.design.widget.NavigationView
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    app:headerLayout="@layout/nav_header_navigation"
+        app:itemTextColor="#fff"
+    app:menu="@menu/activity_navigation_drawer" />
 </android.support.v4.widget.DrawerLayout>
-<!--
-<android.support.design.widget.NavigationView
-android:id="@+id/nav_view"
-android:layout_width="wrap_content"
-android:layout_height="match_parent"
-android:layout_gravity="start"
-app:headerLayout="@layout/nav_header_navigation"
-app:menu="@menu/activity_navigation_drawer" />-->
+
