--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3087B4</color>
     <color name="colorPrimaryDark">#143D55</color>
     <color name="colorAccent">#7E9234</color>
+    <color name="white">#fff</color>
 
     <color name="colorBlue">#143D55</color>
 </resources>
