--- a/app/src/main/res/layout/activity_burn_out.xml
+++ b/app/src/main/res/layout/activity_burn_out.xml
@@ -39,9 +39,11 @@
             <Spinner
                 android:id="@+id/fac_choice"
                 android:layout_width="384dp"
-                android:layout_height="28dp"
+                android:layout_height="25dp"
                 android:layout_marginBottom="29dp"
                 android:layout_marginTop="71dp"
+                android:backgroundTint="#000"
+                android:popupBackground="#000"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/title_graph"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="140dp"
                 android:fontFamily="sans-serif-condensed"
-                android:text="Years After Graduation"
                 android:textAlignment="center"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
